apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: innodeploy

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
      annotations:
        image-version: "final-backend-fix"

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: backend
          image: ghcr.io/hachemn/innodeploy-backend:43
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
